Implemented View Document,Forms,Letters

--- a/essays5.html
+++ b/essays5.html
@@ -104,7 +104,7 @@
           <td><h2>Essays:</h2></td>
         </tr>
         <tr id="schoolname">
-          <td class="hf">School Name:UID</td>
+          <td class="hf">School Name:Loyoler</td>
         </tr>
         <tr>
           <td class="df">Personal Statement:</td>
