Changed Button Styling

--- a/essays3.html
+++ b/essays3.html
@@ -133,8 +133,7 @@
         <tr>
           <td></td>
           <td>
-            <button class="lbtn">
-            <!-- onclick="location.href='essays2.html'" -->
+            <button class="btn btn-outline-primary">
             Back to Essays
             </button>
           </td>
