--- a/forms5.html
+++ b/forms5.html
@@ -79,7 +79,7 @@
           Transcripts:
         </td>
         <td>
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
         </td>
       </tr>
       <tr>
@@ -87,7 +87,7 @@
           Resume:
         </td>
         <td>
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
         </td>
       </tr>
       <tr>
