--- a/letter4.html
+++ b/letter4.html
@@ -111,19 +111,19 @@
         <tr class="text-center">
           <td>
             Letter 1
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr class="text-center">
           <td>
             Letter 2
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr class="text-center">
           <td>
             Letter 3
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr>
