--- a/essays5.html
+++ b/essays5.html
@@ -109,31 +109,31 @@
         <tr>
           <td class="df">Personal Statement:</td>
           <td>
-            <input type="button" value="View Document" class="lbtn" onclick="msg()">
+            <input type="button" value="View Document" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr>
           <td class="df">Experience Description:</td>
           <td>
-            <input type="button" value="View Document" class="lbtn" onclick="msg()">
+            <input type="button" value="View Document" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr>
           <td class="df">MD-PHD Essay:</td>
           <td>
-            <input type="button" value="View Document" class="lbtn" onclick="msg()">
+            <input type="button" value="View Document" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr>
           <td class="df">Secondary Essay:</td>
           <td>
-            <input type="button" value="View Document" class="lbtn" onclick="msg()">
+            <input type="button" value="View Document" class="btn btn-outline-primary" onclick="msg()">
           </td>
         </tr>
         <tr>
           <td></td>
           <td>
-            <button class="lbtn">
+            <button class="btn btn-outline-primary">
             <!-- onclick="location.href='essays2.html'" -->
             Back to Essays
             </button>
