--- a/forms3.html
+++ b/forms3.html
@@ -79,7 +79,7 @@
           Transcripts:
         </td>
         <td>
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
         </td>
       </tr>
       <tr>
@@ -87,7 +87,7 @@
           Resume:
         </td>
         <td>
-            <input type="button" value="View" class="lbtn" onclick="msg()">
+            <input type="button" value="View" class="btn btn-outline-primary" onclick="msg()">
         </td>
       </tr>
       <tr>
@@ -125,7 +125,7 @@
           
         </td>
         <td>
-          <button class="lbtn" onclick="location.href='forms.html'">Back to Forms</button>
+          <button class="btn btn-outline-primary" onclick="location.href='forms.html'">Back to Forms</button>
         </td>
       </tr>
     </table>
