Added button styling

--- a/letter3.html
+++ b/letter3.html
@@ -128,7 +128,7 @@
         </tr>
         <tr>
           <td>
-            <button class="lbtn">
+            <button class="btn btn-outline-primary">
               Back to Letters
             </button>
           </td>
