--- a/tasks.html
+++ b/tasks.html
@@ -121,7 +121,7 @@
     </h1>
 
     <script>
-      function disableButtons(a, b, c, d, e, f, theBox, time_date ) {
+      function disableButtons(a, b, c, d, e, f, theBox, time_date) {
         document.getElementById(a).disabled = true;
         document.getElementById(b).disabled = true;
         document.getElementById(c).disabled = true;
@@ -132,59 +132,250 @@
       }
     </script>
 
-    <div >
+    <div>
       <div class="int-head">
-        <h2 >Interview Scheduler</h2>
-        <text>Click a time to select an interview slot<br><br></text>
+        <h2>Interview Scheduler</h2>
+        <text>Click a time to select an interview slot<br /><br /></text>
       </div>
       <div class="col">
         <div class="col2">
           <h5>UID</h5>
           <p id="uInterview">Interview time: Not yet selected</p>
           <ul>
-            <li><button class="button-solid" id="u1" onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: November 12 9:00 am')">November 12 9:00 am</button></li>
-            <li><button class="button-solid" id="u2" onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: November 12 10:00 am')">November 12 10:00 am</button></li>
-            <li><button class="button-solid" id="u3" onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: November 12 11:00 am')">November 12 11:00 am</button></li>
-            <li><button class="button-solid" id="u4" onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: November 12 12:00 pm')">November 12 12:00 pm</button></li>
-            <li><button class="button-solid" id="u5" onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: November 12 1:00 pm')">November 12 1:00 pm</button></li>
-            <li><button class="button-solid" id="u6" onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: November 12 2:00 pm')">November 12 2:00 pm</button></li>
-          </ul> 
+            <li>
+              <button
+                class="button-solid"
+                id="u1"
+                onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: December 12 9:00 am')"
+              >
+                December 12 9:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="u2"
+                onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: December 12 10:00 am')"
+              >
+                December 12 10:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="u3"
+                onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: December 12 11:00 am')"
+              >
+                December 12 11:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="u4"
+                onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: December 12 12:00 pm')"
+              >
+                December 12 12:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="u5"
+                onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: December 12 1:00 pm')"
+              >
+                December 12 1:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="u6"
+                onclick="disableButtons('u1', 'u2', 'u3', 'u4', 'u5', 'u6', 'uInterview', 'Interview time: December 12 2:00 pm')"
+              >
+                December 12 2:00 pm
+              </button>
+            </li>
+          </ul>
 
           <h5>Jarvard University</h5>
           <p id="jInterview">Interview time: Not yet selected</p>
           <ul>
-            <li><button class="button-solid" id="j1" onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: November 12 9:00 am')">November 12 9:00 am</button></li>
-            <li><button class="button-solid" id="j2" onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: November 12 10:00 am')">November 12 10:00 am</button></li>
-            <li><button class="button-solid" id="j3" onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: November 12 11:00 am')">November 12 11:00 am</button></li>
-            <li><button class="button-solid" id="j4" onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: November 12 12:00 am')">November 12 12:00 pm</button></li>
-            <li><button class="button-solid" id="j5" onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: November 12 1:00 pm')">November 12 1:00 pm</button></li>
-            <li><button class="button-solid" id="j6" onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: November 12 2:00 pm')">November 12 2:00 pm</button></li>
-          </ul> 
+            <li>
+              <button
+                class="button-solid"
+                id="j1"
+                onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: December 12 9:00 am')"
+              >
+                December 12 9:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="j2"
+                onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: December 12 10:00 am')"
+              >
+                December 12 10:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="j3"
+                onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: December 12 11:00 am')"
+              >
+                December 12 11:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="j4"
+                onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: December 12 12:00 am')"
+              >
+                December 12 12:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="j5"
+                onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: December 12 1:00 pm')"
+              >
+                December 12 1:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="j6"
+                onclick="disableButtons('j1', 'j2', 'j3', 'j4', 'j5', 'j6', 'jInterview', 'Interview time: December 12 2:00 pm')"
+              >
+                December 12 2:00 pm
+              </button>
+            </li>
+          </ul>
         </div>
         <div class="col2">
           <h5>Loyoler University</h5>
           <p id="lInterview">Interview time: Not yet selected</p>
           <ul>
-            <li><button class="button-solid" id="l1" onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: November 12 9:00 am')">November 12 9:00 am</button></li>
-            <li><button class="button-solid" id="l2" onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: November 12 10:00 am')">November 12 10:00 am</button></li>
-            <li><button class="button-solid" id="l3" onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: November 12 11:00 am')">November 12 11:00 am</button></li>
-            <li><button class="button-solid" id="l4" onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: November 12 12:00 pm')">November 12 12:00 pm</button></li>
-            <li><button class="button-solid" id="l5" onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: November 12 1:00 pm')">November 12 1:00 pm</button></li>
-            <li><button class="button-solid" id="l6" onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: November 12 2:00 pm')">November 12 2:00 pm</button></li>
-          </ul> 
+            <li>
+              <button
+                class="button-solid"
+                id="l1"
+                onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: December 12 9:00 am')"
+              >
+                December 12 9:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="l2"
+                onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: December 12 10:00 am')"
+              >
+                December 12 10:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="l3"
+                onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: December 12 11:00 am')"
+              >
+                December 12 11:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="l4"
+                onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: December 12 12:00 pm')"
+              >
+                December 12 12:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="l5"
+                onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: December 12 1:00 pm')"
+              >
+                December 12 1:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="l6"
+                onclick="disableButtons('l1', 'l2', 'l3', 'l4', 'l5', 'l6', 'lInterview', 'Interview time: December 12 2:00 pm')"
+              >
+                December 12 2:00 pm
+              </button>
+            </li>
+          </ul>
           <h5>Drown University</h5>
           <p id="dInterview">Interview time: Not yet selected</p>
           <ul>
-            <li><button class="button-solid" id="d1" onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: November 12 9:00 am')">November 12 9:00 am</button></li>
-            <li><button class="button-solid" id="d2" onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: November 12 10:00 am')">November 12 10:00 am</button></li>
-            <li><button class="button-solid" id="d3" onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: November 12 11:00 am')">November 12 11:00 am</button></li>
-            <li><button class="button-solid" id="d4" onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: November 12 12:00 pm')">November 12 12:00 pm</button></li>
-            <li><button class="button-solid" id="d5" onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: November 12 1:00 pm')">November 12 1:00 pm</button></li>
-            <li><button class="button-solid" id="d6" onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: November 12 2:00 pm')">November 12 2:00 pm</button></li>
-          </ul> 
+            <li>
+              <button
+                class="button-solid"
+                id="d1"
+                onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: December 12 9:00 am')"
+              >
+                December 12 9:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="d2"
+                onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: December 12 10:00 am')"
+              >
+                December 12 10:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="d3"
+                onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: December 12 11:00 am')"
+              >
+                December 12 11:00 am
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="d4"
+                onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: December 12 12:00 pm')"
+              >
+                December 12 12:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="d5"
+                onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: December 12 1:00 pm')"
+              >
+                December 12 1:00 pm
+              </button>
+            </li>
+            <li>
+              <button
+                class="button-solid"
+                id="d6"
+                onclick="disableButtons('d1', 'd2', 'd3', 'd4', 'd5', 'd6', 'dInterview', 'Interview time: December 12 2:00 pm')"
+              >
+                December 12 2:00 pm
+              </button>
+            </li>
+          </ul>
         </div>
       </div>
-
 
       <div class="col3">
         <h2>To-Do</h2>
@@ -208,18 +399,26 @@
             </button>
           </div>
         </div>
-        <h2> <br> <br>       Deadlines </h2>   
+        <h2>
+          <br />
+          <br />
+          Deadlines
+        </h2>
         <ul class="tass">
-          <li><b>November 21: </b>University of Bexas letters of recommendation</li>
-          <li><b>November 21: </b>Partmouth University primary application </li>
-          <li><b>November 26: </b>University of Northern Dalifornia interview </li>
-          <li><b>November 27: </b>University of Clorida secondary application </li>
-          <li><b>November 29: </b>Eastwester University primary application </li>
-          <li><b>November 30: </b>Depar University primary application </li>
+          <li>
+            <b>December 21: </b>University of Bexas letters of recommendation
+          </li>
+          <li><b>December 21: </b>Partmouth University primary application</li>
+          <li>
+            <b>December 26: </b>University of Northern Dalifornia interview
+          </li>
+          <li>
+            <b>December 27: </b>University of Clorida secondary application
+          </li>
+          <li><b>December 29: </b>Eastwester University primary application</li>
+          <li><b>December 30: </b>Depar University primary application</li>
         </ul>
       </div>
-
-
     </div>
     <script>
       $("#addTask").click(function () {
@@ -240,7 +439,6 @@
           }
         }
       });
-
 
       document.getElementById("navBob").innerHTML =
         "Hello, " +
