--- a/calendar.html
+++ b/calendar.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="stylesheet"
-      href="http://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
+      href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
     />
     <link rel="stylesheet" href="jqueryui.com/resources/demos/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
