--- a/calendar.html
+++ b/calendar.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css"
     />
-    <link rel="stylesheet" href="jqueryui.com/resources/demos/style.css" />
+    <link rel="stylesheet" href="//jqueryui.com/resources/demos/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
